# Trading-Infrastructure

./: .env.example  .gitattributes  .gitignore  AGENTS.md  README.md  pyproject.toml  tsc.txt
docs/: architecture.md  resume-and-interview-notes.md  resume-and-interview-notes.zh.md
docs/research/: open-source-comparison.md
docs/reviews/: 2026-07-03-phase-0-4-review.md
docs/superpowers/plans/: 2026-06-08-phase-0-foundation.md  2026-06-08-phase-1-core-models-order-state.md  2026-06-22-phase-2-mini-oms-risk-broker-portfolio.md  2026-06-22-phase-3-event-driven-trading-flow.md  2026-06-22-phase-4-replay-reporting.md  2026-07-03-phase-5a-sqlite-persistence.md  2026-07-03-phase-5b-run-history-query.md  2026-07-03-phase-6-fastapi-read-api.md  2026-07-03-phase-7-async-market-data.md  2026-07-03-phase-8-paper-adapter-boundary.md
docs/superpowers/specs/: 2026-06-08-mini-trading-infrastructure-design.md  2026-07-03-phase-5a-sqlite-persistence-design.md  2026-07-03-phase-5b-run-history-query-design.md  2026-07-03-phase-6-fastapi-read-api-design.md  2026-07-03-phase-7-async-market-data-design.md  (+1 more)
src/mini_trading/: config.py
tests/integration/: test_async_trading_flow.py  test_cli_demo.py  test_event_driven_flow.py  test_order_execution_flow.py  test_read_api.py  test_run_history_cli.py
tests/unit/: test_core_models.py  test_mock_broker.py  test_mock_marketdata.py  test_oms.py  test_order_state.py  test_package_smoke.py  test_paper_broker.py  test_portfolio.py  test_replay_report.py  test_risk.py  test_sqlite_run_store.py  test_threshold_strategy.py
(+22 files in other folders)
