[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mini-trading-infra"
version = "0.1.0"
description = "US equity mini trading infrastructure with a mock-first Mini OMS."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "pydantic>=2.7,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"

