[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mini-trading-infra"
version = "0.1.0"
description = "US equity mini trading infrastructure with a mock-first Mini OMS."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.115,<0.116",
    "pydantic>=2.7,<3",
    "uvicorn>=0.30,<1",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27,<0.28",
    "pytest>=8,<9",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"
